[workspace]
resolver = "2"

members = [
    "picky",
    "picky-krb",
    "picky-asn1",
    "picky-asn1-der",
    "picky-asn1-x509",
    # "picky-signtool", # FIXME: something is broken with lief-cwal-sys build script
    "ffi",
]

default-members = [
    "picky",
    "picky-krb",
    "picky-asn1",
    "picky-asn1-der",
    "picky-asn1-x509",
]