[package]
name = "picky-ffi"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "picky"
crate-type = ["staticlib", "cdylib"]
doc = false
test = false
doctest = false

[dependencies]
picky = { version = "6.4.0", default-features = false, features = ["ssh", "time_conversion"], path = "../picky/" }
diplomat = { git = "https://github.com/CBenoit/diplomat.git", branch = "csharp-backend" }
diplomat-runtime = { git = "https://github.com/CBenoit/diplomat.git", branch = "csharp-backend" }
