[package]
name = "picky-ffi"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "picky"
crate-type = ["staticlib", "cdylib"]
doc = false
test = false
doctest = false

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.2.0"

[dependencies]
picky = { path = "../picky/", default-features = false, features = ["ssh", "x509", "time_conversion", "jose", "pkcs12", "pkcs7","http_timestamp"] }
picky-asn1 = { path = "../picky-asn1", default-features = false }
picky-asn1-der = { version = "0.4", path = "../picky-asn1-der" }
picky-asn1-x509 = { version = "0.12", path = "../picky-asn1-x509", features = ["legacy", "zeroize"] }

argon2 = "0.5"

# FFI
diplomat = { git = "https://github.com/CBenoit/diplomat.git", rev = "f4d93d57e93025c57e75e9711d2418faa9311a42" }
diplomat-runtime = { git = "https://github.com/CBenoit/diplomat.git", rev = "f4d93d57e93025c57e75e9711d2418faa9311a42" }

time = "0.3.27"
hex = "0.4.3"
serde_json = "1.0.105"

# WASM support
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
