[package]
name = "picky-ffi"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
name = "picky"
crate-type = ["staticlib", "cdylib"]
doc = false
test = false
doctest = false

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0"

[dependencies]
picky = { path = "../picky/", default-features = false, features = ["ssh", "x509", "time_conversion", "jose", "pkcs12", "pkcs7", "http_timestamp", "putty"] }
picky-asn1 = { path = "../picky-asn1", default-features = false }
picky-asn1-der = { path = "../picky-asn1-der" }
picky-asn1-x509 = { path = "../picky-asn1-x509", features = ["legacy", "zeroize"] }

argon2 = "=0.6.0-rc.1"
rand = "0.9"

# FFI
diplomat = { git = "https://github.com/CBenoit/diplomat.git", rev = "f4d93d57e93025c57e75e9711d2418faa9311a42" }
diplomat-runtime = { git = "https://github.com/CBenoit/diplomat.git", rev = "f4d93d57e93025c57e75e9711d2418faa9311a42" }

time = "0.3"
hex = "0.4"
serde_json = "1"

# WASM support
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

# Pin transitive dependencies versions.
# TODO: Remove when stable versions will be released.
blake2 = "=0.11.0-rc.2"
digest = "=0.11.0-rc.3"
crypto-common = "=0.2.0-rc.4"
block-buffer = "=0.11.0"
password-hash = "=0.6.0-rc.7"
