[package]
name = "picky-asn1-der"
version = "0.4.0"
edition = "2021"
rust-version = "1.60"
authors = [
    "KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>",
    "Benoît CORTIER <benoit.cortier@fried-world.eu>",
    "Alexandr Yusuk <aleksandr.yusuk@apriorit.com>",
]
keywords = ["serde", "asn1", "asn1-der", "serialize", "deserialize"]
categories = ["encoding"]
description = "An ASN.1-DER subset for serde"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Devolutions/picky-rs"
readme = "README.md"
include = ["src/**/*", "README.md", "CHANGELOG.md"]

[dependencies]
picky-asn1 = { version = "0.7.0", path = "../picky-asn1" }
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
serde_bytes = "0.11.5"
lazy_static = { version = "1.4.0", optional = true }

[dev-dependencies]
base64 = "0.13.0"
pretty_assertions = "1.2.1"
serde_bytes = "0.11.5"
num-bigint-dig = "0.8.1"
oid = { version = "0.2.1", default-features = false, features = ["serde_support"] }

[features]
debug_log = ["lazy_static"]
