[package]
name = "picky-asn1-x509"
version = "0.14.6"
authors = [
    "Benoît CORTIER <bcortier@devolutions.net>",
    "Sergey Noskov <snoskov@avito.ru>",
    "Kim Altintop <kim@monadic.xyz>",
    "Joe Ellis <joe.ellis@arm.com>",
    "Hugues de Valon <hugues.devalon@arm.com>",
    "Isode Ltd./Geobert Quach <geobert.quach@isode.com>",
    "Alexandr Yusuk <aleksandr.yusuk@apriorit.com>",
]
description = "Provides ASN1 types defined by X.509 related RFCs - now using der crate"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Devolutions/picky-rs"

[dependencies]
# Core ASN.1 DER implementation
der = { version = "0.7", features = ["derive", "oid", "alloc"] }
spki = { version = "0.7" }
x509-cert = { version = "0.2" }
pkcs1 = { version = "0.7" }
pkcs8 = { version = "0.10" }
sec1 = { version = "0.7" }
thiserror = "1"

# OID constants
const-oid = { version = "0.9" }

[dev-dependencies]
pretty_assertions = "1.4"
hex = "0.4"
expect-test = "1"
