[package]
name = "picky-asn1"
version = "0.7.0"
edition = "2021"
rust-version = "1.60"
authors = [
    "Benoît CORTIER <benoit.cortier@fried-world.eu>",
    "Alexandr Yusuk <aleksandr.yusuk@apriorit.com>",
]
keywords = ["serde", "asn1", "serialize", "deserialize"]
categories = ["encoding"]
description = "Provide ASN.1 simple types"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Devolutions/picky-rs"
readme = "README.md"

[dependencies]
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
oid = { version = "0.2.1", default-features = false, features = ["serde_support"] }
serde_bytes = "0.11.5"
chrono = { version = "0.4.19", optional = true }
time = { version = "0.3.9", optional = true }
zeroize = { version = "^1.5", optional = true }

[dev-dependencies]
picky-asn1-der = { path = "../picky-asn1-der" }

[features]
chrono_conversion = ["chrono"]
time_conversion = ["time"]
zeroize = ["dep:zeroize"]
