[package]
name = "picky-core"
version = "3.0.0"
authors = ["jtrepanier-devolutions <jtrepanier@devolutions.net>"]
edition = "2018"

[lib]
name = "picky_core"

[dependencies]
mbedtls = { git = "https://github.com/Devolutions/rust-mbedtls.git", branch = "wayk"}
chrono = "0.4.6"
serde_json = "1.0.39"
serde = "1.0.89"
serde_derive = "1.0.90"
rand = "0.6.5"
rand_chacha = "0.1.1"
rand_core = "0.4.0"
regex = "1.1.5"
base64 = "0.10.1"
hex = "0.3.2"
x509-parser = "0.4.1"
der-parser = "1.1.1"