[package]
name = "picky-krb"
version = "0.4.0"
authors = ["Devolutions Inc."]
edition = "2021"
rust-version = "1.60"
keywords = ["kerberos", "asn1", "parse"]
categories = ["encoding"]
description = "Encode/decode Kerberos ASN.1 DER structs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Devolutions/picky-rs"
readme = "README.md"
include = ["src/**/*", "README.md", "CHANGELOG.md"]

[dependencies]
picky-asn1 = { version = "0.5.0", features = ["chrono_conversion"] }
picky-asn1-der = "0.3.1"
picky-asn1-x509 = "0.8.0"
serde = { version = "1.0.136", features = ["derive"] }
byteorder = "1.4.3"
thiserror = "1.0.30"

pbkdf2 = { version = "0.11", features = ["sha1"] }
hmac = "0.12.1"
sha1 = "0.10.1"

crypto = "0.4.0"
aes = "0.8.1"
des = "0.8.1"
cbc = "0.1.2"
rand = "0.8.5"

uuid = { version = "1.1.2", features = ["v4", "serde"] }
num-derive = "0.3.3"
num-traits = "0.2.15"
bincode = "1.3.3"
