[package]
name = "picky-krb"
version = "0.7.1"
authors = ["Devolutions Inc."]
edition = "2021"
rust-version = "1.60"
keywords = ["kerberos", "asn1", "parse"]
categories = ["encoding"]
description = "Encode/decode Kerberos ASN.1 DER structs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Devolutions/picky-rs"
readme = "README.md"
include = ["src/**/*", "README.md", "CHANGELOG.md", "LICENSE-*"]

[dependencies]
picky-asn1 = { version = "0.7", path = "../picky-asn1" }
picky-asn1-der = { version = "0.4", path = "../picky-asn1-der" }
picky-asn1-x509 = { version = "0.11", path = "../picky-asn1-x509" }
serde = { version = "1.0.152", features = ["derive"] }
byteorder = "1.4.3"
thiserror = "1.0.38"

pbkdf2 = { version = "0.12", features = ["sha1"] }
hmac = "0.12.1"
sha1 = "0.10.5"

crypto = "0.4.0"
aes = "0.8.2"
des = "0.8.1"
cbc = "0.1.2"
rand = "0.8.5"

uuid = { version = "1.3.0", default-features = false, features = ["serde"] }
oid = "0.2.1"
num-bigint-dig = { version = "0.8.2", features = ["rand"] }
