[package]
name = "picky-krb"
version = "0.9.0"
authors = ["Devolutions Inc."]
edition = "2021"
rust-version = "1.60"
keywords = ["kerberos", "asn1", "parse"]
categories = ["encoding"]
description = "Encode/decode Kerberos ASN.1 DER structs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Devolutions/picky-rs"
readme = "README.md"
include = ["src/**/*", "README.md", "CHANGELOG.md", "LICENSE-*"]

[dependencies]
picky-asn1 = { version = "0.9", path = "../picky-asn1" }
picky-asn1-der = { version = "0.5", path = "../picky-asn1-der" }
picky-asn1-x509 = { version = "0.13", path = "../picky-asn1-x509" }
serde = { version = "1", features = ["derive"] }
byteorder = "1.5"
thiserror = "1"

pbkdf2 = { version = "0.12", features = ["sha1"] }
hmac = "0.12"
sha1 = "0.10"

crypto = "0.5"
aes = "0.8"
des = "0.8"
cbc = "0.1"
rand = "0.8"

uuid = { version = "1.10", default-features = false, features = ["serde"] }
oid = "0.2"
num-bigint-dig = { version = "0.8", features = ["rand"] }
