[package]
name = "picky-server"
version = "4.9.0"
authors = [
    "Jonathan Trépanier <jtrepanier@devolutions.net>",
    "Benoît CORTIER <benoit.cortier@fried-world.eu>",
    "Johann Dufaud <jdufaud@devolutions.net>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Devolutions/picky-rs"
publish = false

[workspace]
# picky-server has been discontinued, so this crate is not in the main workspace anymore

[dependencies]
picky = { version = "7.0.0-rc.3", default-features = false, features = ["x509", "jose", "pkcs7", "ssh", "time_conversion" ], path = "../picky" }
picky-asn1 = { version = "0.6", path = "../picky-asn1" }
mongodm = { version = "0.8.0", features = ["tokio-runtime"] }
clap = { version = "2.33.3", features = ["yaml"] }
saphir = { version = "2.8.2", features = ["macro"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
multihash = { version = "0.15", features = ["sha1", "secure-hashes", "std", "multihash-impl"], default-features = false }
multibase = "0.9.1"
log = "0.4.14"
log4rs = "1.0.0"
time = "0.3.7"
base64 = "0.13.0"
hex = "0.4.3"
thiserror = "1.0.30"
unicase = "2.6.0"
rand = { version = "0.8.5", optional = true }
tokio = { version = "1.17.0", features = ["fs"]}
futures = "0.3.21"

[dev-dependencies]
rand = "0.8.5"
tokio-test = "0.4.2"
criterion = "0.3.5"
reqwest = "0.11.9"

[features]
pre-gen-pk = ["rand"]

[[bench]]
name = "basic"
harness = false
