[package]
name = "picky-server"
version = "4.10.0"
authors = [
    "Jonathan Trépanier <jtrepanier@devolutions.net>",
    "Benoît CORTIER <bcortier@devolutions.net>",
    "Johann Dufaud <jdufaud@devolutions.net>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Devolutions/picky-rs"
publish = false

[workspace]
# picky-server has been discontinued, so this crate is not in the main workspace anymore

[dependencies]
picky = { version = "7.0.0-rc.8", default-features = false, features = ["x509", "jose", "pkcs7", "ssh", "time_conversion" ], path = "../picky" }
picky-asn1 = { version = "0.9", path = "../picky-asn1" }
mongodm = { version = "0.8", features = ["tokio-runtime"] }
clap = { version = "2.33", features = ["yaml"] }
saphir = { version = "2.8", features = ["macro"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
multihash = { version = "0.15", features = ["sha1", "secure-hashes", "std", "multihash-impl"], default-features = false }
multibase = "0.9"
log = "0.4"
log4rs = "1.0"
time = "0.3"
base64 = "0.13"
hex = "0.4"
thiserror = "1"
unicase = "2.6"
rand = { version = "0.8", optional = true }
tokio = { version = "1.17", features = ["fs"] }
futures = "0.3"

[dev-dependencies]
rand = "0.8"
tokio-test = "0.4"
criterion = "0.3"
reqwest = "0.11"

[features]
pre-gen-pk = ["rand"]

[[bench]]
name = "basic"
harness = false
