[package]
name = "picky-signtool"
version = "0.1.0"
authors = [ "Alexandr Yusuk <aleksandr.yusuk@apriorit.com>" ]
edition = "2021"
description = "A signtool like Authenticode sign and verify tool based on picky and lief-rs"
publish = false

[dependencies]
anyhow = "1.0.45"
clap = "2.33.3"
walkdir = "2.3.2"
base64 = "0.13.0"
encoding_rs = "0.8"
lief-rs = { git = "https://github.com/Devolutions/lief-rs.git", rev = "52dca2" }

[dependencies.picky]
path = "../picky"
default-features = false
features = ["wincert", "ctl", "ctl_http_fetch", "http_timestamp"]
