[package]
name = "picky-signtool"
version = "0.1.0"
authors = [ "Alexandr Yusuk <aleksandr.yusuk@apriorit.com>" ]
edition = "2021"
description = "A signtool like Authenticode sign and verify tool based on picky and lief-rs"
publish = false

[dependencies]
anyhow = "1.0.75"
clap = "4.3.24"
walkdir = "2.3.3"
base64 = "0.21.2"
encoding_rs = "0.8.33"
lief-cwal = "0.1.0"
picky = { version = "7.0.0-rc.7", default-features = false, features = ["wincert", "ctl", "ctl_http_fetch", "http_timestamp"] }
