[package]
name = "picky"
version = "7.0.0-rc.7"
authors = [
    "Benoît CORTIER <bcortier@devolutions.net>",
    "Jonathan Trepanier <jtrepanier@devolutions.net>",
    "François Dubois <fdubois@devolutions.net>",
    "Richard Markiewicz <rmarkiewicz@devolutions.net>",
    "Ionut Mihalcea <ionut.mihalcea@arm.com>",
    "Kim Altintop <kim@monadic.xyz>",
    "Alexandr Yusuk <aleksandr.yusuk@apriorit.com>",
    "Flavio Castelli <flavio@castelli.me>",
    "Xynnn_ <xynnn@linux.alibaba.com>",
]
description = "Portable X.509, PKI, JOSE and HTTP signature implementation."
keywords = ["x509", "jwt", "signature", "jose", "pki"]
edition = "2021"
rust-version = "1.65"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Devolutions/picky-rs"
include = ["src/**/*", "README.md", "CHANGELOG.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
picky-asn1 = { version = "0.7", path = "../picky-asn1", features = ["zeroize"] }
picky-asn1-der = { version = "0.4", path = "../picky-asn1-der" }
picky-asn1-x509 = { version = "0.11", path = "../picky-asn1-x509", features = ["legacy", "zeroize"] }
serde = { version = "1.0.152", features = ["derive"] }
base64 = "0.21.0"
thiserror = "1.0.38"
byteorder = { version = "1.4.3", optional = true }
chrono = { version = "0.4.23", default-features = false, optional = true }
time = { version = "0.3.19", optional = true }
serde_json = { version = "1.0.93", optional = true }
http = { version = "0.2.9", optional = true }
cab = { version = "0.3.0", optional = true }
lexical-sort = { version = "0.3.1", optional = true }
zeroize = "1.5"

# FIXME: either use ureq, or even better: do not require this kind of dependency at all to let user decide which lib to use.
# (currently users should *really* not forget to use `spawn_blocking` when calling associated functions from async context)
reqwest = { version = "0.11.14", default-features = false, features = ["blocking"], optional = true }

# /!\ ===== cryptography dependencies ===== /!\
# These should be updated as soon as possible.
# /!\ ===================================== /!\

rand = "0.8.5"
num-bigint-dig = "0.8.2"

ed25519-dalek = "1"
# NOTE: x25519-dalek 2.0 is still in rc, so we use 1.0 for now.
x25519-dalek = "1"
# ed25519 and x25519 use older versions of `rand` crate
rand_ed = { package = "rand", version = "0.7" }

p256 = { version = "0.13", features = ["ecdh"] }
p384 = { version = "0.13", features = ["ecdh"] }

rsa = "0.6.1"

digest = "0.10.6"
md-5 = "0.10.5"
sha1 = { package = "sha-1", version = "0.10.1" }
sha2 = "0.10.6"
sha3 = "0.10.6"

aes-gcm = { version = "0.10", optional = true }
aes = { version = "0.8.2", optional = true }
aes-kw = { version = "0.2.1", optional = true, features = ["std"] }
ctr = { version = "0.9.2", optional = true }
cbc = { version = "0.1.2", optional = true, features = ["alloc"] }
bcrypt-pbkdf = { version = "0.10.0", optional = true }
des = { version = "0.8", optional = true }
rc2 = { version = "0.8", optional = true }
pbkdf2 = { version = "0.12", optional = true }
hmac = { version = "0.12", optional = true }

ucs2 = "0.3"

[dev-dependencies]
pretty_assertions = "1.3.0"
hex = "0.4.3"
cfg-if = "1.0.0"
ring = "0.16.20"
rstest = "0.12.0"
expect-test = "1"
# We are pinning `tempfile` version here to reduce the number of dependencies, as tempfile >= 3.4
# requires `windows` crate version which is different from the one used by other dependencies.
# (Adds `windows 0.48` dependency while `windows 0.42` is the only one used by other picky
# dependencies. Because of the pre-1.0 version of `windows`, different minor versions of the crate
# are treated as not compatible with each other.)
tempfile = "=3.3"
rand_chacha = "0.3"

[features]
default = ["x509", "jose", "http_signature", "http_trait_impl", "pkcs12"]

# main features
x509 = []
jose = ["dep:serde_json", "dep:aes-gcm", "dep:cbc", "dep:aes-kw"]
http_signature = []
pkcs12 = ["picky-asn1-x509/pkcs12", "dep:des", "dep:rc2", "dep:cbc", "dep:pbkdf2", "dep:hmac", "dep:aes", "x509"]

# secondary features
pkcs7 = ["x509", "picky-asn1-x509/pkcs7"]
http_timestamp = ["dep:reqwest"]
ctl = ["picky-asn1-x509/ctl", "pkcs7", "chrono_conversion"]
ctl_http_fetch = ["dep:reqwest", "dep:cab", "ctl"]
wincert = ["x509", "dep:byteorder"]
ssh = ["dep:byteorder", "dep:aes", "dep:ctr", "dep:cbc", "dep:bcrypt-pbkdf", "dep:lexical-sort"]
http_trait_impl = ["dep:http"]
chrono_conversion = ["dep:chrono", "picky-asn1/chrono_conversion"]
time_conversion = ["dep:time", "picky-asn1/time_conversion"]

[package.metadata.docs.rs]
# Enable all features when building documentation for docs.rs
all-features = true
