[package]
name = "picky"
version = "7.0.0-rc.17"
authors = [
    "Benoît CORTIER <bcortier@devolutions.net>",
    "Jonathan Trepanier <jtrepanier@devolutions.net>",
    "François Dubois <fdubois@devolutions.net>",
    "Richard Markiewicz <rmarkiewicz@devolutions.net>",
    "Ionut Mihalcea <ionut.mihalcea@arm.com>",
    "Kim Altintop <kim@monadic.xyz>",
    "Alexandr Yusuk <aleksandr.yusuk@apriorit.com>",
    "Flavio Castelli <flavio@castelli.me>",
    "Xynnn_ <xynnn@linux.alibaba.com>",
]
description = "Portable X.509, PKI, JOSE and HTTP signature implementation."
keywords = ["x509", "jwt", "signature", "jose", "pki"]
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Devolutions/picky-rs"
include = ["src/**/*", "README.md", "CHANGELOG.md", "LICENSE-*"]

[dependencies]
picky-asn1-x509 = { version = "0.14", path = "../picky-asn1-x509" }
# RustCrypto crates - direct usage
der = { version = "0.7", features = ["derive", "oid", "alloc"] }
spki = { version = "0.7", features = ["std"] }
x509-cert = { version = "0.2" }
const-oid = { version = "0.9" }
sec1 = { version = "0.7" }
pkcs1 = { version = "0.7" }
pkcs8 = { version = "0.10" }
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
thiserror = "1"
byteorder = { version = "1.5", optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }
time = { version = "0.3", optional = true }
serde_json = { version = "1", optional = true }
hex = "0.4"
lexical-sort = { version = "0.3", optional = true }
zeroize = "1.8"


# /!\ ===== cryptography dependencies ===== /!\
# These should be updated as soon as possible.
# /!\ ===================================== /!\

rand = "0.8"
rand_core = "0.6"
num-bigint-dig = "0.8"

ed25519-dalek = { version = "2", features = ["hazmat", "rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }

p256 = { version = "0.13", features = ["ecdh"] }
p384 = { version = "0.13", features = ["ecdh"] }
p521 = { version = "0.13", features = ["ecdh"] }

rsa = { version = "0.9", features = ["std"] }

digest = "0.10"
md5 = { package = "md-5", version = "0.10", features = ["oid"] }
sha1 = { version = "0.10", features = ["oid"] }
sha2 = { version = "0.10", features = ["oid"] }
sha3 = { version = "0.10", features = ["oid"] }

aes-gcm = { version = "0.10", optional = true }
aes = { version = "0.8", optional = true }
aes-kw = { version = "0.2", optional = true, features = ["std"] }
argon2 = { version = "0.5", optional = true }
ctr = { version = "0.9", optional = true }
cbc = { version = "0.1", optional = true, features = ["alloc"] }
bcrypt-pbkdf = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
cfg-if = "1.0"
ring = "0.17"
rstest = "0.26"
expect-test = "1"
tempfile = "3.13"
rand_chacha = "0.3"
picky-test-data = { path = "../picky-test-data", version = "0.1" }

[features]
default = ["x509", "jose"]

# main features
x509 = []
jose = ["dep:serde_json", "dep:aes-gcm", "dep:cbc", "dep:aes-kw"]

# secondary features  
wincert = ["x509", "dep:byteorder"]
ssh = ["dep:byteorder", "dep:aes", "dep:ctr", "dep:cbc", "dep:bcrypt-pbkdf", "dep:lexical-sort"]
chrono_conversion = ["dep:chrono"]
time_conversion = ["dep:time"]
putty = ["dep:argon2", "dep:hmac", "ssh"]

[package.metadata.docs.rs]
# Enable all features when building documentation for docs.rs
all-features = true
